# task-stack

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tauri-release.yml
docs/: index.md
docs/developer-guide/: architecture.md
docs/user-guide/: configuration.md  data-files.md  getting-started.md  keyboard-shortcuts.md  tray-menu.md
go/: .gitignore  README.md  entry.go  go.mod  hotkey.go  hotkey_darwin.go  hotkey_other.go  hotkey_spec.go  hotkey_windows.go  icon.go  main.go  settings.go  stack.go  stack_test.go  stackview.go  theme.go  tray.go  window.go
python/: README.md  pyproject.toml
python/src/task_stack/: __main__.py  _hotkey_subprocess.py  app.py  hotkey.py  icon.py  macos_permissions.py  settings.py  stack.py  tcl_tk_env.py  window.py
spec/: app-coordination.md  global-hotkey.md  settings.md  stack-window.md  system-tray.md  task-management.md  tray-icon-generation.md
tauri/: .gitignore  package.json
tauri/src/: index.html  main.js  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: hotkey.rs  icon.rs  lib.rs  main.rs  settings.rs  stack.rs
