[package]
name = "task-stack"
version = "0.1.0"
description = "A persistent task-stack tray app"
authors = ["task-stack contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "task_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tiny-skia = "0.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
